# pc_nuke_diffusion

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NvidiaMaxineWrapper.h  README.md  build.bat  build_deps.bat  get_ESRGAN_models.bat  pc_sd_inference.cpp  pc_sd_load_model.cpp  pc_sd_nvfx_videoeffects.cpp  pc_sd_upscaler.cpp  promp_weight_doc.txt  stable_diffusion_wrapper.h
VAEHD/: CMakeLists_HDR.txt  README_HDR_VAE.md  comfy_vae_decode_HD.py  hdr_vae_advanced_example.cpp  hdr_vae_decode.hpp  stable_diffusion_hdr_integration.cpp
nuke/pc_nuke_diffusion/: init.py  menu.py
nuke/pc_nuke_diffusion/sample_scenes/: Flux_v01.nk  Flux_v01.nk~  upscale_esrgan_v1.nk
python/: convert_ESRGAN_models.py  pyproject.toml
